@@ -3,6 +3,8 @@ Revision history for Perl extension PGXN::API
 0.12.6
       - Eliminated "Use of uninitialized variable in soubroutine" warning when
         indexing extensions with no abstract.
+      - Allow an optional trailing backslash on search URLs (since the
+        template includes one).
 
 0.12.5  2011-04-25T18:07:27
       - The directory name in which browsable distribution source files are
